--- a/composer.json
+++ b/composer.json
@@ -19,10 +19,14 @@
         "php": ">=7.0.8",
         "composer/installers": "^1.2",
         "cweagans/composer-patches": "^1.6.5",
+        "drupal/better_exposed_filters": "^5.2",
         "drupal/console": "^1.0.2",
         "drupal/core": "^8.8.0",
         "drupal/core-composer-scaffold": "^8.8.0",
+        "drupal/facets": "^1.3",
         "drupal/feeds": "^3.0@beta",
+        "drupal/search_api": "^1.23",
+        "drupal/ultimate_cron": "^2.0@alpha",
         "drush/drush": "^9.7.1 | ^10.0.0",
         "vlucas/phpdotenv": "^4.0",
         "webflo/drupal-finder": "^1.0.0",
