--- a/config/sync/core.extension.yml
+++ b/config/sync/core.extension.yml
@@ -14,7 +14,9 @@ module:
   dblog: 0
   dynamic_page_cache: 0
   editor: 0
+  facets: 0
   feeds: 0
+  fidesio_articles: 0
   field: 0
   field_ui: 0
   file: 0
@@ -22,6 +24,9 @@ module:
   help: 0
   history: 0
   image: 0
+  jquery_ui: 0
+  jquery_ui_slider: 0
+  jquery_ui_touch_punch: 0
   language: 0
   link: 0
   locale: 0
@@ -35,12 +40,15 @@ module:
   quickedit: 0
   rdf: 0
   search: 0
+  search_api: 0
+  search_api_db: 0
   shortcut: 0
   system: 0
   taxonomy: 0
   text: 0
   toolbar: 0
   tour: 0
+  ultimate_cron: 0
   update: 0
   user: 0
   views_ui: 0
@@ -51,6 +59,7 @@ theme:
   classy: 0
   bartik: 0
   seven: 0
+  fidesio: 0
 profile: standard
 _core:
   default_config_hash: R4IF-ClDHXxblLcG0L7MgsLvfBIMAvi_skumNFQwkDc
